--- a/index.html
+++ b/index.html
@@ -1,6 +1,51 @@
 <!DOCTYPE html>
-<head><title>Umit Vice</title></head>
-<body>
-<h1>Welcome</h1>
-</body>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>image slider</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+     
+     <div class="slider">
+         <div class="slides">
+          
+            <input type="radio" name="radio-btn" id="radio1">
+            <input type="radio" name="radio-btn" id="radio2">
+            <input type="radio" name="radio-btn" id="radio3">
+            <input type="radio" name="radio-btn" id="radio4">
+
+            <div class="slide first">
+                <img src="images/cortana.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="images/Vr1.jpeg" alt="">
+            </div>
+            <div class="slide">
+                <img src="images/Vr2.jpg" alt="">
+            </div>
+            <div class="slide">
+                <img src="images/Vr1.jpeg" alt="">
+            </div>
+
+            <div  class="navigation-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
+            </div>
+
+         </div>
+         <div class="navigation-manual">
+             <label for="radio1" class="manual-btn"></label>
+             <label for="radio2" class="manual-btn"></label>
+             <label for="radio3" class="manual-btn"></label>
+             <label for="radio4" class="manual-btn"></label>
+         </div>
+
+     </div>
+
+     <script src="javascript/main.js"></script>
+
+    </body>
 </html>
