--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>image slider</title>
+        <title>Ümit Vice</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-     
+     <div>
+     <h1 class="header" id="h1" >Hi!I'm Ümithan Viçe.I'm software developer.</br>I work on mobile and web aplications</h1> 
+     </div>
+
      <div class="slider">
          <div class="slides">
           
