--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body>
+    /*<body>
         <cards class="cards">
             <div class="card">
                 <img src="images/Vr1.jpeg" alt="Vr1" class="card_image">
@@ -117,5 +117,5 @@
 
      <script src="javascript/main.js"></script>
 
-    </body>
+    </body>*/
 </html>
