--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    /*<body>
-        <cards class="cards">
+      <body>
+        /*<cards class="cards">
             <div class="card">
                 <img src="images/Vr1.jpeg" alt="Vr1" class="card_image">
                 <div class="card_content">
@@ -112,10 +112,10 @@
                     </div>
                 </div>
             </div>
-        </cards>
+        </cards>*/
         
 
      <script src="javascript/main.js"></script>
 
-    </body>*/
+    </body>
 </html>
