--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
       <body>
-        <!-- <cards class="cards">
+            <cards class="cards">
             <div class="card">
                 <img src="images/Vr1.jpeg" alt="Vr1" class="card_image">
                 <div class="card_content">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
             </div>
-        </cards> !-->
+        </cards> 
         
 
      <script src="javascript/main.js"></script>
