main content setup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <a href="#" class="brand">Ümit Vice's portfolio site.</a>
       <div class="navigation">
-        <a href="#home">Home</a>
+        <a href="#main">Home</a>
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
         <a href="#services">Services</a>
@@ -50,7 +50,7 @@
         </div>
         <div class="column col-right">
           <h2 class="content-title">Hello There! I'm Ümit Vice</h2>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, totam mollitia quas possimus necessitatibus dolore beatae consectetur, fugiat assumenda molestiae, aliquid veniam delectus laboriosam incidunt.
+          <p class="paragraph-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, totam mollitia quas possimus necessitatibus dolore beatae consectetur, fugiat assumenda molestiae, aliquid veniam delectus laboriosam incidunt.
              <br/> Rerum necessitatibus asperiores minima. Officiis enim, veritatis officia facere similique eligendi commodi facilis quaerat molestias animi voluptate tempora beatae pariatur libero quod quisquam optio, iste rem neque?
              <br/> Iusto nam unde deleniti odit non, sequi aliquid at quod culpa maxime dolore sit eligendi repudiandae, assumenda labore mollitia cumque facere! Laborum tenetur blanditiis, officia inventore repellendus deserunt, labore itaque provident debitis odit fuga recusandae officiis iusto rerum temporibus voluptatibus perferendis veritatis ut tempora expedita consequatur neque dicta?</p>
              <a href="#" class="btn">See More</a>
@@ -58,7 +58,212 @@
       </div>
     </section>
 
-  
+    <section class="skills" id="skills">
+        <div class="title">
+            <h2 class="second-title">My Skills</h2>
+        </div>
+        <div class="content">
+           <div class="column col-left">
+                <h2 class="content-title">My Skills and Experiences</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, blanditiis cupiditate ratione assumenda ad voluptate repellendus aspernatur? Modi, doloribus sapiente nobis quos magnam odio ipsam omnis amet vel consequuntur nisi officia tempora accusantium rem aspernatur ratione laborum nihil beatae voluptas eveniet dicta? Delectus dolor velit adipisci molestiae voluptatem exercitationem facere dicta perferendis quis eum cupiditate cum expedita libero, ut a aspernatur optio mollitia est vel laudantium beatae veritatis voluptatibus sit. Earum fugiat repudiandae blanditiis atque quia nulla! Tenetur, facilis quam nam sequi non eveniet, ea repudiandae placeat repellendus a accusantium provident distinctio vitae quibusdam velit rerum at reprehenderit eaque? Ea!</p>
+                <a href="#" class="btn">See More</a>
+            </div>
+            <div class="column col-right">
+                <div class="bar">
+                    <div class="info">
+                      <span>Javascript</span>
+                      <span>9/10</span>
+                    </div>
+                    <div class="line javascript"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>Python</span>
+                      <span>7/10</span>
+                    </div>
+                    <div class="line python"></div>
+                </div>
+                <div class="bar">
+                  <div class="info">
+                    <span>Node.JS</span>
+                    <span>7/10</span>
+                  </div>
+                  <div class="line node"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>React.JS</span>
+                      <span>8/10</span>
+                    </div>
+                    <div class="line react"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>Redux</span>
+                      <span>8/10</span>
+                    </div>
+                    <div class="line redux"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>Bootstrap</span>
+                      <span>9/10</span>
+                    </div>
+                    <div class="line bootstrap"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>CSS3</span>
+                      <span>9/10</span>
+                    </div>
+                    <div class="line css"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>HTML5</span>
+                      <span>10/10</span>
+                    </div>
+                    <div class="line html"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>AWS (EC2, Lambda, S3, Route 53)</span>
+                      <span>7/10</span>
+                    </div>
+                    <div class="line aws"></div>
+                </div>
+                <div class="bar">
+                  <div class="info">
+                    <span>Google Cloud Platform</span>
+                    <span>7/10</span>
+                  </div>
+                  <div class="line google"></div>
+                </div>
+                <div class="bar">
+                    <div class="info">
+                      <span>MongoDB</span>
+                      <span>8/10</span>
+                    </div>
+                    <div class="line mongodb"></div>
+                </div>
+                <div class="bar">
+                  <div class="info">
+                    <span>Ms SQL</span>
+                    <span>8/10</span>
+                  </div>
+                  <div class="line mssql"></div>
+                </div>
+            </div>
+        </div>
+      </section>
+
+      <services class="services" id="services">
+          <div class="title">
+              <h2 class="section-title">My Services</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Iste, obcaecati praesentium delectus saepe corporis iure 
+                esse tempore inventore quaerat ad, nobis eaque, et culpa molestias!
+              </p>
+          </div>
+          <div class="content">
+
+              <div class="card">
+                  <div class="service-icon">
+                      <i class="fas fa-palette"></i>
+                  </div>
+                  <div class="info">
+                      <h3>Front End Development</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Iste, obcaecati praesentium delectus saepe corporis iure 
+                        esse tempore inventore quaerat ad, nobis eaque, et culpa molestias!
+                      </p>
+                  </div>
+              </div>
+
+              <div class="card">
+                <div class="service-icon">
+                    <i class="fas fa-code"></i>
+                </div>
+                <div class="info">
+                    <h3>Web Development</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                      Iste, obcaecati praesentium delectus saepe corporis iure 
+                      esse tempore inventore quaerat ad, nobis eaque, et culpa molestias!
+                    </p>
+                </div>
+              </div>
+
+          </div>
+      </services>
+      
+      <section class="work" id="work">     
+          <div class="title"> 
+              <h2 class="section-title">My Work</h2>
+          </div>
+          <div class="content">
+
+              <div class="card">
+                  <div class="card-img">
+                      <img src="images/work1.png" alt="">
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-img">
+                      <img src="images/work2.png" alt="">
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-img">
+                      <img src="images/work3.png" alt="">
+                  </div>
+              </div>
+              <div class="card">
+                  <div class="card-img">
+                      <img src="images/work4.png" alt="">
+                  </div>
+              </div>
+              <div class="title">
+                  <a href="#" class="btn">See All</a>
+              </div>
+          </div>
+      </section>
+
+      <section class="contact" id="contact">
+          <div class="title">
+              <h2 class="section-title">Contact Me</h2>
+          </div>  
+          <div class="content">
+              <div class="row">
+                  <div class="card">
+                      <div class="contact-icon">
+                          <i class="fas fa-map-marker-alt"></i>
+                      </div>
+                      <div class="info">
+                          <h3>Adress</h3>
+                          <span>Istanbul, Turkey</span>
+                      </div>
+                  </div>  
+                  <div class="card">
+                      <div class="contact-icon">
+                          <i class="fas fa-phone"></i>
+                      </div>
+                      <div class="info">
+                          <h3>Telephone</h3>
+                          <span>+90 537 273 8310</span>
+                      </div>
+                  </div>  
+                  <div class="card">
+                      <div class="contact-icon">
+                          <i class="fas fa-envelope"></i>
+                      </div>
+                      <div class="info">
+                          <h3>Email Adress</h3>
+                          <span>umitvice@gmail.com</span>
+                      </div>
+                  </div>  
+              </div>
+      </section>
+
     <script src="script.js" charset="utf-8"></script>
   </body>
 </html>
